--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
+DB_HOST=junction.proxy.rlwy.net
+DB_PORT=16283
 DB_USER=root
-DB_PASSWORD=samcien17
-DB_NAME=inventario_db
-PORT=3002
+DB_PASSWORD=lQyOIGZVMxtQMbEpKlSsKuBKNTkrdVzf
+DB_NAME=railway
+PORT=3001
 JWT_SECRET=clave_secreta_proyecto
